# gamedev_homework_2021

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: homework_ci.yml
01_1/: CMakeLists.txt  hello_world.cpp
01_2/: CMakeLists.txt
01_2/hello_bin/: CMakeLists.txt
01_2/hello_bin/src/: main.cpp
01_2/hello_lib/: CMakeLists.txt
01_2/hello_lib/include/: hello_world_lib.h
01_2/hello_lib/src/: hello_world_lib.cpp
01_2/hello_lib/tests/: test.cpp
02_1/: CMakeLists.txt
02_2/: CMakeLists.txt
03_1/: CMakeLists.txt  game.cpp
03_2/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp
03_3/: CMakeLists.txt  engine.cpp  engine.hpp  game.cpp
04_0/: CMakeLists.txt
04_0/basic_ppm/: canvas.cpp  canvas.hpp  color.hpp  main.cpp
